Fixed JavaScript issue with raty and timeago

--- a/Brewgr.Web/Views/Dashboard/_TastingNoteDashboardDisplay.cshtml
+++ b/Brewgr.Web/Views/Dashboard/_TastingNoteDashboardDisplay.cshtml
@@ -19,7 +19,7 @@
                 <div class="data">
                     Tasted on @Model.TasteDate.ToShortDateString()
                     <h4>Overall Rating</h4>
-                    <span id="star-@Model.TastingNoteId" class="rating block" data-raty-rating="@Model.Rating"></span>
+                    <span id="star-@Model.TastingNoteId" class="rating block" data-rating="@Model.Rating"></span>
                 </div>
             </div>
             <div class="clearall"></div>
