--- a/Brewgr.Web/Views/Recipe/_TastingNoteDetail.cshtml
+++ b/Brewgr.Web/Views/Recipe/_TastingNoteDetail.cshtml
@@ -13,7 +13,7 @@
         <a href="#" class="button button_green button_small floatright marginleft20" data-tastingnoteid="@Model.TastingNoteId">Delete</a>
     }
 				
-    <span id="star-@Model.TastingNoteId" class="rating" data-raty-rating="@Model.Rating"></span>
+    <span id="star-@Model.TastingNoteId" class="rating" data-rating="@Model.Rating"></span>
 				
     <div class="clearall"> </div>
 
