--- a/Brewgr.Web/Views/Shared/_DashboardTastingNote.cshtml
+++ b/Brewgr.Web/Views/Shared/_DashboardTastingNote.cshtml
@@ -14,7 +14,7 @@
 
             <h4 class="tasting-title">Tasted on @Model.TasteDate.ToShortDateString()</h4>
 
-            <span id="star-@Model.TastingNoteId" class="rating" data-raty-rating="@Model.Rating"></span>
+            <span id="star-@Model.TastingNoteId" class="rating" data-rating="@Model.Rating"></span>
 
             <div class="clearall"> </div>
 
