--- a/Brewgr.Web/css/content.css
+++ b/Brewgr.Web/css/content.css
@@ -44,7 +44,7 @@ abbr.timeago { display: none; border: 0; cursor: default; } /* Hide TimeAgo by D
 .comments-wrapper .comment-list li { margin: 0; margin-top: 10px; }
 .comments-wrapper .comment-list li > div { display: table-cell; }
 .comments-wrapper .commenter-image { width: 30px; margin-right: 5px; height: 100%; float: left; }
-.comments-wrapper .commenter-image img { width: 100%; border-radius: 50%; }
+.comments-wrapper .commenter-image img { width: 100%; }
 .comments-wrapper .comment-text p { margin: 0; }
 .comments-wrapper .sub-text { color: #aaa; font-family: verdana; font-size: 11px; }
 
@@ -256,6 +256,7 @@ abbr.timeago { display: none; border: 0; cursor: default; } /* Hide TimeAgo by D
 #dashboard .dashboard-more { width: 70%; display: table; margin: 10px auto; }
 #dashboard .tab-content { padding-top: 20px; }
 #dashboard .list h5 { color:#aaa; margin-bottom:15px; }
+#dashboard .addedby-date { color:#aaa; }
 
 
 /* ------------------------------------------------------------------------------------------*/
